rc/webapp/webapp-v1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: web
    version: v1
    environment: dev
    tier: fe
