rc/webapp/webapp-v2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webapp
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
    name: http
  selector:
    app: webapp
    version: v2
    environment: prod
    tier: fe
