rc/webapp/webapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  backend:
    serviceName: svc-webapp
    servicePort: 80
